--- a/search.html
+++ b/search.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Trying for simple search</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="scripts/search.js" type="text/javascript"></script>
     <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
@@ -12,10 +11,11 @@
         <form>
             <input type="text" name="keyword" />
             <button type="button" onclick="search()">Search</button>
+            <button id="closeButton" type="button" onclick="closeResults(this)">X</button>
         </form>
     </div>
 
     <div id="results"></div>
-
+    <script src="scripts/search.js" type="text/javascript"></script>
 </body>
 </html>
